--- a/.github/workflows/phpunit.yml
+++ b/.github/workflows/phpunit.yml
@@ -22,4 +22,4 @@ jobs:
       run: composer install --no-progress --no-suggest --prefer-dist --no-interaction
 
     - name: Run PHPUnit
-      run: vendor/bin/phpunit --coverage-text --coverage-filter src --min-coverage 70
+      run: vendor/bin/phpunit --coverage-text --coverage-filter app --min-coverage 70
